--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: rgb(57, 106, 235);
+  color: rgb(248, 248, 248);
 }
 
 /*
@@ -20,7 +20,7 @@ header {
 header h1.logo {
   margin: 0;
   font-size: 1.7em;
-  color: #f5394b;
+  color: #ffffff;
   text-transform: uppercase;
   float: left;
 }
@@ -41,7 +41,7 @@ header h1.logo:hover {
 
 div.home {
   padding: 10px 0 30px 0;
-  background-color: rgb(21, 252, 11);
+  background-color: rgb(14, 246, 68, 0.379);
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
@@ -49,7 +49,7 @@ div.home {
 
 div.about {
   padding: 10px 0 30px 0;
-  background-color: rgb(246,177,14);
+  background-color: rgba(14, 246, 68, 0.379);
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
@@ -85,6 +85,6 @@ h3 {
 }
 
 .menu li a {
-  color: rgb(244, 41, 224);
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
