cleaned up website and added input

--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Python Flask Demo CONNER MARTIN</title>
+      <title>Soccer Position Generator - Conner Martin</title>
       <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
   </head>
   <body>
     <header>
       <div class="container">
-        <h1 class="logo">Welcome to the Python Flask Demo</h1>
+        <h1 class="logo">Soccer Position Generator</h1>
         <strong><nav>
           <ul class="menu">
             <li><a href="{{ url_for('home') }}">Home</a></li>
