--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: rgb(248, 248, 248);
+  color: rgb(255, 255, 255);
+  background-color: #000000;
 }
 
 /*
@@ -39,13 +40,6 @@ header h1.logo:hover {
   margin: 0 auto;
 }
 
-div.home {
-  padding: 10px 0 30px 0;
-  background-color: rgb(14, 246, 68, 0.379);
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-}
 
 div.about {
   padding: 10px 0 30px 0;
