--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -6,34 +6,28 @@ body {
   background-color: #000000;
 }
 
-/*
- * Formatting the header area
- */
-
 header {
-  background-color: #000000;
+  background-color: #207933;
   height: 35px;
   width: 100%;
-  opacity: .9;
   margin-bottom: 10px;
 }
 
-header h1.logo {
+.logo {
   margin: 0;
-  font-size: 1.7em;
   color: #ffffff;
   text-transform: uppercase;
   float: left;
 }
 
-header h1.logo:hover {
-  color: rgb(246,177,14);
-  text-decoration: none;
+header a {
+  color: #ffffff;
 }
 
-/*
- * Center the body content
- */
+header a:hover {
+  color: rgb(14, 95, 246);
+  text-decoration: none;
+}
 
 .container {
   width: 1200px;
@@ -43,26 +37,7 @@ header h1.logo:hover {
 
 div.about {
   padding: 10px 0 30px 0;
-  background-color: rgba(14, 246, 68, 0.379);
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-}
-
-h2 {
-  font-size: 3em;
-  margin-top: 40px;
   text-align: center;
-  letter-spacing: -2px;
-}
-
-h3 {
-  font-size: 1.7em;
-  font-weight: 100;
-  margin-top: 30px;
-  text-align: center;
-  letter-spacing: -1px;
-  color: rgb(14,9,9);
 }
 
 .menu {
@@ -78,7 +53,3 @@ h3 {
   margin-left: 35px;
 }
 
-.menu li a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-}
