--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,16 +2,21 @@
 {% block content %}
 <div class="home">
     <h1>Homepage</h1>
+    <h3>Welcome to the Soccer Position Generator! To get started, please enter your details below.</h3>
     <p>
     <form action="{{ url_for('greet') }}" method='post'>
         Please enter your full name: <input type='text' name='myName'><br>
         Please enter your weight in pounds: <input type='number' name='myWeight'><br>
         Please enter your height in inches: <input type='number' name='myHeight'><br>
         Please enter your speed on a scale of 1-10: <input type='number' name='mySpeed'><br>
+        Please enter which foot you kick with (Left or Right): <input type='name' name='myFoot'><br>
         <p>Name: {{myName}}</p>
         <p>Weight: {{myWeight}}</p>
         <p>Height: {{myHeight}}</p>
         <p>Speed: {{mySpeed}}</p>
+        <div style="text-align: center; font-size: 24px; margin-top: 50px;">
+            Your recommended position is:
+        </div>
         <input type='submit' value='Submit'>
     </form>
     </p>
