--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,13 +9,14 @@
         Please enter your weight in pounds: <input type='number' name='myWeight'><br>
         Please enter your height in inches: <input type='number' name='myHeight'><br>
         Please enter your speed on a scale of 1-10: <input type='number' name='mySpeed'><br>
-        Please enter which foot you kick with (Left or Right): <input type='name' name='myFoot'><br>
+        Please enter which foot you kick with (Left or Right): <input type='text' name='myFoot'><br>
         <p>Name: {{myName}}</p>
         <p>Weight: {{myWeight}}</p>
         <p>Height: {{myHeight}}</p>
         <p>Speed: {{mySpeed}}</p>
+        <p>Dominant Foot: {{myFoot}}</p>
         <div style="text-align: center; font-size: 24px; margin-top: 50px;">
-            Your recommended position is:
+            Your recommended position is: {{myPosition}}<br>
         </div>
         <input type='submit' value='Submit'>
     </form>
