--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="home">
-    <h1>Homepage</h1>
-    <h3>Welcome to the Soccer Position Generator! To get started, please enter your details below.</h3>
+    <h1 style="text-align: center;">Homepage</h1>
+    <h3 style="text-align: center;">Welcome to the Soccer Position Generator! To get started, please enter your details below.</h3>
     <p>
     <form action="{{ url_for('greet') }}" method='post'>
         Please enter your full name: <input type='text' name='myName'><br>
@@ -10,15 +10,16 @@
         Please enter your height in inches: <input type='number' name='myHeight'><br>
         Please enter your speed on a scale of 1-10: <input type='number' name='mySpeed'><br>
         Please enter which foot you kick with (Left or Right): <input type='text' name='myFoot'><br>
-        <p>Name: {{myName}}</p>
-        <p>Weight: {{myWeight}}</p>
-        <p>Height: {{myHeight}}</p>
-        <p>Speed: {{mySpeed}}</p>
-        <p>Dominant Foot: {{myFoot}}</p>
-        <div style="text-align: center; font-size: 24px; margin-top: 50px;">
-            Your recommended position is: {{myPosition}}<br>
+        <p>Name: <span class="green">{{myName}}</span></p>
+        <p>Weight: <span class="green">{{myWeight}}</span></p>
+        <p>Height: <span class="green">{{myHeight}}</span></p>
+        <p>Speed: <span class="green">{{mySpeed}}</span></p>
+        <p>Dominant Foot: <span class="green">{{myFoot}}</span></p>
+        <input type='submit' value='Submit' id="submitButton"><br>
+        <div style="text-align: center; font-size: 24px; margin-top: 5px;">
+            Your recommended position is: <span class="green">{{myPosition}}</span><br>
         </div>
-        <input type='submit' value='Submit'>
+       
     </form>
     </p>
 </div>
